testdata/negative-tests/todo_var_func.go
package example

func TodoVarFunc() {
	// TODO: we should support function types.
	var f func() // ERROR function type
	_ = f
}
